[package]
name = "socks5-protocol"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["io-util"] }
thiserror = "1.0"

[features]
default = []
doc = ["tokio/rt-multi-thread", "tokio/macros"]

[package.metadata."docs.rs"]
all-features = true
